# event_individuation

./: Document Selection and Analysis.ipynb  LICENSE  README.md  pyproject.toml
data/: README.md
model_predictions/: README.md  collapsed_gold_preds.json  gtt_preds.json  gtt_preds_collapsed.json  iterx_preds_added_attack_template.json  iterx_preds_collapsed.json  iterx_preds_converted.json  tempgen_preds.json  tempgen_preds_collapsed.json  tempgen_preds_converted.json
reannotation_study/: README.md  Reannotation Study Analysis.ipynb  muc_agreement.csv  muc_docs.csv
reannotation_study/annotations/: muc_sample_a1.json  muc_sample_a2.json  muc_sample_a3.json
